--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u856365670_librify
+DB_DATABASE=librify_app_v2.1.0
 # DB_USERNAME=u856365670_librify
 # DB_PASSWORD=LibrifyDatabase1234567890
 DB_USERNAME=root
